[package]
name = "serde_skill"
version = "0.1.0"
edition = "2024"
description = "A lightweight frontmatter + content parser for Skill format, with serde support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/serde_skill"
documentation = "https://docs.rs/serde_skill"
readme = "README.md"
keywords = ["serde", "frontmatter", "skill", "parser"]
categories = ["parsing", "encoding", "serialization"]

[dependencies]
serde = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"
